--- a/toppers.html
+++ b/toppers.html
@@ -1139,9 +1139,6 @@ body::before {
   <header class="header">
     <div class="header-content">
       <div class="logo-container">
-        <div class="logo-icon">
-          <i class="fas fa-award"></i>
-        </div>
         <div>
           <h1>NOORUSSALAM MADRASA</h1>
           <p class="subtitle">Annual Examination Results 2025-26</p>
@@ -1244,8 +1241,8 @@ const classesData = [
   { 
     class: "1", 
     toppers: [
-      { name: "Suhail P", mark: "498 / 500", rank: "First" },
-      { name: "Minhaj P", mark: "495 / 500", rank: "Second" }
+      { name: "AZIM FAIZAN M", mark: "291 / 300", rank: "First" },
+      { name: "AYISHA ZAHRA P", mark: "278 / 300", rank: "Second" }
     ]
   },
   { 
