--- a/toppers.html
+++ b/toppers.html
@@ -1241,7 +1241,7 @@ canvas {
 
 <script>
 // Certificate background image URL
-const CERT_BG = "https://i.postimg.cc/pLvg6Pbv/topper.jpg";
+const CERT_BG = "https://i.postimg.cc/zBPrs6ww/topper.jpg";
 
 // Class data with two toppers per class (First and Second)
 const classesData = [
