--- a/toppers.html
+++ b/toppers.html
@@ -877,7 +877,7 @@ body {
 
 <script>
 // Certificate background image URL
-const CERT_BG = "https://i.postimg.cc/zBPrs6ww/topper.jpg";
+const CERT_BG = "https://postimg.cc/JD5gPpb8";
 
 // Class data with two toppers per class (First and Second)
 const classesData = {
