--- a/resulthome.html
+++ b/resulthome.html
@@ -1351,7 +1351,7 @@
                 <div class="toppers-btn-container" id="toppersBtnContainer">
                     <a href="toppers.html" class="toppers-btn">
                         <i class="fas fa-crown"></i>
-                        <span>Class Toppers Poster Download</span>
+                        <span>Download Class Toppers Poster</span>
                         <span class="toppers-label">NEW</span>
                     </a>
                 </div>
