--- a/gallery.html
+++ b/gallery.html
@@ -1129,6 +1129,18 @@
 
       <!-- Gallery Images -->
       <div class="col-6 col-md-4 col-lg-3 gallery-item">
+        <img src="https://i.ibb.co/d483vCpC/Whats-App-Image-2026-02-06-at-2-18-04-PM.jpg" class="img-fluid rounded shadow-sm" alt="Madrasa Event">
+      </div>
+      <div class="col-6 col-md-4 col-lg-3 gallery-item">
+        <img src="https://i.ibb.co/x8rD8PXk/Whats-App-Image-2026-02-06-at-2-18-58-PM.jpg" class="img-fluid rounded shadow-sm" alt="Madrasa Event">
+      </div>
+      <div class="col-6 col-md-4 col-lg-3 gallery-item">
+        <img src="https://i.ibb.co/wFZd2RBs/Whats-App-Image-2026-02-06-at-2-18-05-PM-1.jpg" class="img-fluid rounded shadow-sm" alt="Madrasa Event">
+      </div>
+      <div class="col-6 col-md-4 col-lg-3 gallery-item">
+        <img src="https://i.ibb.co/KPJJKfV/Whats-App-Image-2026-02-06-at-2-18-05-PM.jpg" class="img-fluid rounded shadow-sm" alt="Madrasa Event">
+      </div>
+      <div class="col-6 col-md-4 col-lg-3 gallery-item">
         <img src="https://i.ibb.co/FbjR9zTZ/Whats-App-Image-2025-10-28-at-3-43-55-PM.jpg" class="img-fluid rounded shadow-sm" alt="Madrasa Event">
       </div>
       <div class="col-6 col-md-4 col-lg-3 gallery-item">
@@ -1397,4 +1409,5 @@
 
 </body>
 </html>
+
 
