--- a/test.html
+++ b/test.html
@@ -6,8 +6,8 @@
 	  <meta charset="UTF-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <meta name="description" content=" ">
-	  		<meta property="og:image" content="https://socialwaves.in/assets/meta-icons/0b753fae9d0b7ed66a929f2105e832cd.png">
-	  	  <title>POSTER, Create Personalised poster to show support</title>
+	  		<meta property="og:image" content="https://socialwaves.in/assets/meta-icons/13dc7dce58739782fa93b04ce832de9e.png">
+	  	  <title>വർണോത്സവം , Create Personalised poster to show support</title>
 	  <link rel="icon" type="image/png" href="assets/favicons/default.png">
 	  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	  <link href="res/css/cropper.css" rel="stylesheet">
@@ -39,7 +39,7 @@
 							.loader_screen{ background: #cbe0f4; top: 0; left: 0; right: 0; bottom: 0; z-index: 214748364; position: relative; box-sizing: border-box; padding: 20px; display: none; border-radius: 1rem; overflow: hidden;}
 						</style>
 						<div class="loader_screen">
-							<img src="assets/titles/0b753fae9d0b7ed66a929f2105e832cd.jpg" class="img-fluid mb-3">
+							<img src="assets/titles/13dc7dce58739782fa93b04ce832de9e.jpg" class="img-fluid mb-3">
 						   <p class="text-center complete-hide">Please wait, File Uploading...</p>
 						   <div class="progress complete-hide">
 							  <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width:40%">50%</div>
@@ -60,13 +60,18 @@
 						</div>
 						<br>
 						<div id="ad_show_hidden">
-							<img src="assets/titles/0b753fae9d0b7ed66a929f2105e832cd.jpg" class="img-fluid mb-3">
+							<img src="assets/titles/13dc7dce58739782fa93b04ce832de9e.jpg" class="img-fluid mb-3">
 							<h5 class="text-center">Create Personalised poster to support the campaign</h5>
-							<h5 class="text-center">Mahithand</h5>
+							<h5 class="text-center">വർണോത്സവം </h5>
 							<h6 class="text-center"> </h6>
 							<p class="text-sm text-center"> </p>
 							<p class="text-sm text-center">create and download poster with your own image</p>
-							<form id="main_form" class="form-signin"> <input type='hidden' value='4630' name='frame_id'> <button class='btn btn-lg btn-primary btn-block text-uppercase' type='submit'>Create</button></form>						</div>
+							<form id="main_form" class="form-signin">
+						<div class='form-label-group'>
+						   <input type='text' name='name' placeholder='' class='form-control' required>
+						   <label onclick='$(this).parent().find("input").focus()'>Name</label>
+						</div>
+				 <input type='hidden' value='4627' name='frame_id'> <button class='btn btn-lg btn-primary btn-block text-uppercase' type='submit'>Create</button></form>						</div>
 					</div>
 									<hr>
 								<center>
@@ -130,7 +135,7 @@
 	  
 	  <script type="text/javascript">
 
-		var whatsapp_text = "whatsapp://send?text=Mahithand.   Link: https://socialwaves.in/s2nEG";
+		var whatsapp_text = "whatsapp://send?text=വർണോത്സവം .   Link: https://socialwaves.in/cItxs";
 
 		var $progress = $('.progress');
 		var $progressBar = $('.progress-bar');
@@ -166,7 +171,7 @@
 				input.value = '';
 				image.src = url;
 				cropper = new Cropper(image, {
-					aspectRatio: 1,
+					aspectRatio: 0.83478260869565,
 					viewMode: 3,
 				});
 				$('.crop-button').show();
@@ -211,8 +216,8 @@
 
 			if (cropper) {
 				canvas = cropper.getCroppedCanvas({
-					width: 540,
-					height: 540,
+					width: 192,
+					height: 230,
 				});
 
 				$('#rep_image_ret')[0].src = canvas.toDataURL();
