--- a/toppers.html
+++ b/toppers.html
@@ -750,12 +750,9 @@ body {
           <option value="2">Class 2</option>
           <option value="3">Class 3</option>
           <option value="4">Class 4</option>
-          <option value="5">Class 5</option>
           <option value="6">Class 6</option>
-          <option value="7">Class 7</option>
           <option value="8">Class 8</option>
           <option value="9">Class 9</option>
-          <option value="10">Class 10</option>
         </select>
       </div>
       
@@ -882,8 +879,8 @@ const classesData = {
     { name: "Ashmil T", mark: "490 / 500", rank: "Second" }
   ],
   "3": [
-    { name: "Muhammed Hadi K", mark: "487 / 500", rank: "First" },
-    { name: "Danish T", mark: "485 / 500", rank: "Second" }
+    { name: "NABA FATHIMA V", mark: "337 / 350", rank: "First" },
+    { name: "MUHAMMED RASWAN KP", mark: "283 / 350", rank: "Second" }
   ],
   "4": [
     { name: "Faris P", mark: "489 / 500", rank: "First" },
@@ -902,8 +899,8 @@ const classesData = {
     { name: "Riya Mol", mark: "482 / 500", rank: "Second" }
   ],
   "8": [
-    { name: "Zainab K", mark: "492 / 500", rank: "First" },
-    { name: "Muhsin P", mark: "489 / 500", rank: "Second" }
+    { name: "ASNA K", mark: "145 / 200", rank: "First" },
+    { name: "FATHIMA NIHALA P", mark: "117 / 200", rank: "Second" }
   ],
   "9": [
     { name: "Thaj T", mark: "488 / 500", rank: "First" },
