--- a/toppers.html
+++ b/toppers.html
@@ -903,8 +903,8 @@ const classesData = {
     { name: "FATHIMA NIHALA P", mark: "117 / 200", rank: "Second" }
   ],
   "9": [
-    { name: "Thaj T", mark: "488 / 500", rank: "First" },
-    { name: "Sinan P", mark: "485 / 500", rank: "Second" }
+    { name: "ADHIL K", mark: "155 / 200", rank: "First" },
+    { name: "RINSINA PK", mark: "150 / 200", rank: "Second" }
   ],
   "10": [
     { name: "Saniya F", mark: "495 / 500", rank: "First" },
