--- a/toppers.html
+++ b/toppers.html
@@ -880,7 +880,7 @@ const classesData = {
   ],
   "3": [
     { name: "NABA FATHIMA V", mark: "337 / 350", rank: "First" },
-    { name: "MUHAMMED RASWAN KP", mark: "283 / 350", rank: "Second" }
+    { name: "RASWAN KP", mark: "283 / 350", rank: "Second" }
   ],
   "4": [
     { name: "Faris P", mark: "489 / 500", rank: "First" },
